@@ -103,7 +103,8 @@ mLOG_DECLARE_CATEGORY(GB_STATE);
  *   | bit 5: Has channel 1 sweep occurred?
  *   | bit 6: Is channel 3's memory readable?
  *   | bit 7: Reserved
- * | 0x000A8 - 0x000AF: Rserved
+ * | 0x000A8 - 0x000AB: Left capacitor charge
+ * | 0x000AC - 0x000AF: Right capacitor charge
  * | 0x000B0 - 0x000B3: Next sample
  * 0x000B4 - 0x000153: Video state
  * | 0x000B4 - 0x000B5: Current x
@@ -302,7 +303,8 @@ struct GBSerializedState {
 	struct {
 		struct GBSerializedPSGState psg;
 		GBSerializedAudioFlags flags;
-		int32_t reserved[2];
+		int32_t capLeft;
+		int32_t capRight;
 		uint32_t nextSample;
 	} audio;
 
